--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,18 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* Hide scrollbar for Webkit browsers */
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scroll-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+  
+  /* Smooth scrolling */
+  scroll-behavior: smooth;
+}
