--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,7 @@
 }
 
 .dark {
-  --background: #171717;
+   --background: #000c00;
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
